--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-What is this?:
+### What is this?:
+
 Sample application using Flask + MongoDB
 
-Required:
-・MongoDB http://www.mongodb.org/
-・Python module 'Flask' (pip install flask)
-・Python module 'PyMongo' (pip install pymongo)
+### Required:
+- MongoDB http://www.mongodb.org/
+- Python module 'Flask' (pip install flask)
+- Python module 'PyMongo' (pip install pymongo)
